--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,14 @@
 {
   "dependencies": {
+    "@apollo/server": "^4.11.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
+    "type-graphql": "^2.0.0-rc.2",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
