--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "@apollo/client": "^3.11.8",
     "graphql": "^16.9.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
