--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "@types/jsonwebtoken": "^9.0.7",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
+    "graphql-constraint-directive": "^5.4.3",
     "graphql-scalars": "^1.23.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
