--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,12 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
+    "eslint": "^9.11.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "prettier": "^3.3.3",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
@@ -21,6 +27,11 @@
     "prod": "ts-node-dev ./src/database/seed.ts && ts-node-dev src/index.ts",
     "grep": "cd ./src/database && gh repo list jujuck --json name,url,owner,languages,isPrivate,id >> raw.json",
     "create": "cd ./src/database && node create.js",
-    "seed": "ts-node-dev ./src/database/seed.ts"
+    "seed": "ts-node-dev ./src/database/seed.ts",
+    "format": "npx prettier --write src"
+  },
+  "lint-staged": {
+    "*.sql": "prettier --check",
+    "*.ts": "eslint --report-unused-disable-directives"
   }
 }
