--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "@apollo/server": "^4.11.0",
     "dotenv": "^16.4.5",
+    "eslint": "^9.12.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "express": "^4.19.2",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
@@ -12,13 +15,12 @@
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.12.0",
     "@types/express": "^4.17.21",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
-    "eslint": "^9.11.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
     "ts-node-dev": "^2.0.0"
   },
@@ -28,7 +30,8 @@
     "grep": "cd ./src/database && gh repo list jujuck --json name,url,owner,languages,isPrivate,id >> raw.json",
     "create": "cd ./src/database && node create.js",
     "seed": "ts-node-dev ./src/database/seed.ts",
-    "format": "npx prettier --write src"
+    "lint": "eslint '*/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write '*/**/*.{js,jsx,ts,tsx}'"
   },
   "lint-staged": {
     "*.sql": "prettier --check",
