--- a/package.json
+++ b/package.json
@@ -6,5 +6,17 @@
   "scripts": {
     "prepare": "husky",
     "lint": "lint-staged"
+  },
+  "lint-staged": {
+    "api/**/*.{js,jsx,ts,tsx}": [
+      "eslint --report-unused-disable-directives",
+      "npm run lint --prefix api",
+      "npm run format --prefix api"
+    ],
+    "client/**/*.{js,jsx,ts,tsx}": [
+      "eslint --report-unused-disable-directives",
+      "npm run lint --prefix client",
+      "npm run format --prefix client"
+    ]
   }
 }
