--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,5 @@ services:
       - "5173:5173"
     env_file: .env
     restart: always
-    environment:
-      - NODE_ENV=production
     volumes:
-      - ./client/src:/app/src/
+      - ./client:/app
