--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
+    "supertest": "^7.0.0",
     "type-graphql": "^2.0.0-rc.2",
     "typeorm": "^0.3.20"
   },
@@ -18,10 +19,12 @@
     "@eslint/eslintrc": "^3.1.0",
     "@eslint/js": "^9.12.0",
     "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.5.4",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "prettier": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0"
   },
   "scripts": {
