--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
       "npm run lint --prefix client",
       "npm run format --prefix client"
     ]
+  },
+  "dependencies": {
+    "winston": "^3.15.0"
   }
 }
